fix: Reduce TableCell's vertical padding on mobile
  The default vertical padding on `<TableCell>` components is .875rem
  which are equivalent to 14px with our font size.
  This leaves only 20px for the content height in this 48px high block,
  while our icons are 32px high.

  With the padding, our tables are subject to vertical scroll on mobile
  (i.e. I don't know why the scroll is not present on desktop while the
  cell content is still too high for the available height).

  Reducing the vertical padding to .5rem (or 8px) allows us to have 32px
  high icons without overflowing the cell.

--- a/src/styles/table.styl
+++ b/src/styles/table.styl
@@ -33,6 +33,8 @@
     +small-screen()
         .set-table-name
             flex  0 0 100%
+            padding-top .5rem
+            padding-bottom .5rem
 
         .set-table-activity
         .set-table-permission
